--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@ automatically boot up. You should see the following:</p>
 &lt;/sample-component&gt;
 </code></pre>
 
+<h4>Live Demo</h4>
+<sample-component name="World"></sample-component>
+
 <p>For a more practical (though more complex) example, see the google map component in the
 controllers folder.</p>
+
+<h4>Live Demo</h4>
+<google-map address="1600 Pennsylvania Ave NW, Washington, DC 20500" key="AIzaSyBn_UEIKjYsaa0nBSDBh2lOSAJ-W_pC1e8" zoom="12" info="<h4>Marker Title</h4><p>Marker description.</p>"></google-map>
+
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
@@ -405,6 +412,6 @@ You can also add custom headers by calling .withHeader(name, value) one or more 
 
     </section>
 
-  
+  <script src="/js/tagger.js" />
   </body>
 </html>
