--- a/index.html
+++ b/index.html
@@ -412,6 +412,6 @@ You can also add custom headers by calling .withHeader(name, value) one or more 
 
     </section>
 
-  <script src="/tagger/js/tagger.js"></script>
+  <script src="bin/tagger.js"></script>
   </body>
 </html>
