Add Google Map Component Code to Page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@ automatically boot up. You should see the following:</p>
 <p>For a more practical (though more complex) example, see the google map component in the
 controllers folder.</p>
 
+<pre><code>
+    &gt;google-map address="1600 Pennsylvania Ave NW, Washington, DC 20500" key="AIzaSyBn_UEIKjYsaa0nBSDBh2lOSAJ-W_pC1e8" zoom="12" info="&gt;h4&lt;Marker Title&gt;/h4&lt;&gt;p&lt;Marker description.&gt;/p&lt;" style="height: 400px; width: 100%"&lt;&gt;/google-map&lt;
+</code></pre>
+
 <h4>Live Demo</h4>
 <google-map address="1600 Pennsylvania Ave NW, Washington, DC 20500" key="AIzaSyBn_UEIKjYsaa0nBSDBh2lOSAJ-W_pC1e8" zoom="12" info="<h4>Marker Title</h4><p>Marker description.</p>" style="height: 400px; width: 100%"></google-map>
 
