Oops. Switched &gt; and &lt;

--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@ automatically boot up. You should see the following:</p>
 controllers folder.</p>
 
 <pre><code>
-    &gt;google-map address="1600 Pennsylvania Ave NW, Washington, DC 20500" key="AIzaSyBn_UEIKjYsaa0nBSDBh2lOSAJ-W_pC1e8" zoom="12" info="&gt;h4&lt;Marker Title&gt;/h4&lt;&gt;p&lt;Marker description.&gt;/p&lt;" style="height: 400px; width: 100%"&lt;&gt;/google-map&lt;
+&lt;google-map 
+  address=&quot;1600 Pennsylvania Ave NW, Washington, DC 20500&quot; 
+  key=&quot;AIzaSyBn_UEIKjYsaa0nBSDBh2lOSAJ-W_pC1e8&quot; 
+  zoom=&quot;12&quot; 
+  info=&quot;&lt;h4&gt;Marker Title&lt;/h4&gt;&lt;p&gt;Marker description.&lt;/p&gt;&quot; style=&quot;height: 400px; width: 100%&quot;&gt;
 </code></pre>
 
 <h4>Live Demo</h4>
