And closing tag.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ controllers folder.</p>
   key=&quot;AIzaSyBn_UEIKjYsaa0nBSDBh2lOSAJ-W_pC1e8&quot; 
   zoom=&quot;12&quot; 
   info=&quot;&lt;h4&gt;Marker Title&lt;/h4&gt;&lt;p&gt;Marker description.&lt;/p&gt;&quot; style=&quot;height: 400px; width: 100%&quot;&gt;
+&lt;/google-map&gt;
 </code></pre>
 
 <h4>Live Demo</h4>
