Remove dumb sample
Not that interesting and looks like it's an actual title.

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@ automatically boot up. You should see the following:</p>
 </code></pre>
 
 <h4>Live Demo</h4>
-<sample-component name="World"></sample-component>
 
-<p>For a more practical (though more complex) example, see the google map component in the
+<p>For a more practical (though more complex) example, see the google map sample component in the
 controllers folder.</p>
 
 <pre><code>
@@ -95,7 +94,6 @@ controllers folder.</p>
 &lt;/google-map&gt;
 </code></pre>
 
-<h4>Live Demo</h4>
 <google-map address="1600 Pennsylvania Ave NW, Washington, DC 20500" key="AIzaSyBn_UEIKjYsaa0nBSDBh2lOSAJ-W_pC1e8" zoom="12" info="<h4>Marker Title</h4><p>Marker description.</p>" style="height: 400px; width: 100%"></google-map>
 
 
