--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ detect javascript errors.</p>
 <p>Download just the "bin" folder (the whole folder, not just tagger.js), and start writing controllers in the controllers folder. Feel free to delete the samples.</p>
 
 <h2>
-<a id="build-in-mvc-functionality" class="anchor" href="#build-in-mvc-functionality" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build in MVC Functionality</h2>
+<a id="built-in-mvc-functionality" class="anchor" href="#built-in-mvc-functionality" aria-hidden="true"><span class="octicon octicon-link"></span></a>Built in MVC Functionality</h2>
 
 <p>This is still under construction, but here's how it works:</p>
 
